# proof-of-assets

./: .env.example  .gitignore  .rusty-hook.toml  Cargo.toml  README.md  input.example.json  input.json.example  receipt.json
host/: Cargo.toml
host/src/: file_utils.rs  main.rs  prover.rs  utils.rs  verifier.rs
host/src/ethereum/: mod.rs  requests.rs  rpc.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
proof-core/: Cargo.toml
proof-core/src/: eth_utils.rs  lib.rs  proof_inputs.rs  proof_io.rs  proof_utils.rs
