[package]
name = "starter"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
methods = { path = "../methods" }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "845ff76", default_features = false, features = ["std", "prove"] }
serde = "1.0"
proof-core = { path = "../proof-core" }
prefix-hex = "0.5.0"
sha3 = "0.10.6"
