[package]
name = "starter"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
methods = { path = "../methods" }
# Pull from latest commit is necessary to access RNG within the zkVM (should be fixed in 0.14 release)
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "845ff76", default_features = false, features = ["std", "prove"] }
serde = "1.0"
proof-core = { path = "../proof-core" }
prefix-hex = "0.5.0"
sha3 = "0.10.6"
serde_json = "1.0.94"
ureq = {version = "2.4.0", features = ["json"]}
dotenv_codegen = "0.15.0"
