[package]
name = "proof-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.155", features = ["derive"] }
k256 = { version = "0.11.6", features = ["ecdsa", "ecdsa-core", "keccak256"], default_features = false }
rlp = "0.5.2"
sha3 = "0.10.6"
