[package]
name = "proof-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "845ff76", default_features = false, features = ["std"] }
serde = {version = "1.0.155", features = ["derive"] }
k256 = { version = "0.11.6", features = ["ecdsa", "ecdsa-core", "keccak256"], default_features = false }
rlp = "0.5.2"
sha3 = "0.10.6"
prefix-hex = "0.5.0"
eth_trie = { git = "https://github.com/carver/eth-trie.rs.git" }

[dev-dependencies]
hex-literal = "0.3.4"
primitive-types = "0.11.0"
