[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "845ff76" }

[dependencies]
# Pull from latest commit is necessary to access RNG within the zkVM (should be fixed in 0.14 release)
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "845ff76", default_features = false, features = ["std"] }
proof-core = { path = "../../proof-core" }
prefix-hex = "0.5.0"
rlp = "0.5.2"
sha3 = "0.10.6"
eth_trie = { git = "https://github.com/carver/eth-trie.rs.git" }
k256 = { version = "0.11.6", features = ["ecdsa", "ecdsa-core", "keccak256"], default_features = false }
