[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = "0.14.0"

[dependencies]
# Pull from latest commit is necessary to access RNG within the zkVM (should be fixed in 0.14 release)
risc0-zkvm = { version = "0.14.0", default_features = false }
proof-core = { path = "../../proof-core" }
prefix-hex = "0.5.0"
sha3 = "0.10.6"
eth_trie = { git = "https://github.com/carver/eth-trie.rs.git" }
concat-arrays = "0.1.2"
